fixed issue with desktop navbar's max width being capped. changed media query to switch from desktop to mobile with the cards. Added desktop navbar spacing element.

--- a/client/src/components/navbar/mediaQuery.css
+++ b/client/src/components/navbar/mediaQuery.css
@@ -4,8 +4,11 @@
 }
 
 /* Show mobile navbar and hide desktop navbar on small screens */
-@media (max-width: 600px) {
+@media (max-width: 639px) {
   #desktop-navbar {
+    display: none;
+  }
+  #desktop-spacer {
     display: none;
   }
   #mobile-navbar {
